--- a/client/public/style.css
+++ b/client/public/style.css
@@ -242,15 +242,15 @@ header {
     font-size: inherit;
     padding: 10px 15px;
   }
+  
   .footer {
-    position: absolute;
-    left: 0;
-    bottom: 0px;
-    width: 100%;
-    background-color: red;
-    color: white;
+    margin-top: 50px;
     text-align: center;
- }
+  }
+
+  .footer p {
+    color: rgb(92, 122, 234);
+  }
 }
 
 @media screen and (min-width: 768px) {
