--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,7 +1,13 @@
 * {
   box-sizing: border-box;
 }
-
+.root
+  {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -204,10 +210,10 @@ header {
   border-radius: 5px;
   border: 1px solid rgba(9, 30, 66, 0.2);
   color: #14279e;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: normal;
-  padding: 10px;
-  width: 225px;
+  padding: 10px 45px 10px 10px;
+  width: 170px;
 }
 
 .header-search:focus {
@@ -216,11 +222,16 @@ header {
 }
 
 .header-search-btn {
-  margin-left: -50px;
-  height: 39px;
-  width: 61px;
+  margin-left: -40px;
+  height: 37px;
+  width: 40px;
+  padding: 5px;
   border: 0;
+  border-radius: 0 5px 5px 0;
   -webkit-appearance: none;
+  line-height: 100%;
+  vertical-align: top;
+  font-size: 15px;
 }
 
 /* Footer */
@@ -235,6 +246,7 @@ header {
 }
 
 @media screen and (min-width: 576px) {
+   /* For phone landscape */
   .comic-details {
     flex-direction: row;
   }
@@ -251,15 +263,18 @@ header {
   }
 
   .header-search {
+    font-size: 14px;
     width: 220px;
-    font-size: inherit;
-    padding: 10px 15px;
   }
 
-
+  .header-search-btn {
+    height: 38px;
+  }
+  
 }
 
 @media screen and (min-width: 768px) {
+
   .comic-content.align-left {
     justify-content: flex-start;
   }
